# ffmpeg-snippets

./: .clang-format  .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  audio_decoder.cpp  audio_encoder.cpp  audio_filter.cpp  audio_resample.cpp  avio_list_dir.cpp  demuxer.cpp  muxer.cpp  video_decoder.cpp  video_encoder.cpp  video_filter.cpp  video_scale.cpp
inc/: audio_decoder_core.h  audio_encoder_core.h  audio_filter_core.h  audio_resampler_core.h  demuxer_core.h  io_data.h  muxer_core.h  print.h  video_decoder_core.h  video_encoder_core.h  video_filter_core.h  video_swscale_core.h
src/: audio_decoder_core.cpp  audio_encoder_core.cpp  audio_filter_core.cpp  audio_resampler_core.cpp  demuxer_core.cpp  io_data.cpp  muxer_core.cpp  video_decoder_core.cpp  video_encoder_core.cpp  video_filter_core.cpp  video_swscale_core.cpp
