# add_executable(avio_list_dir avio_list_dir.cpp ${core_dir}/io_data.cpp)
# target_link_libraries(avio_list_dir PRIVATE ${ffmpeg_solibs})

# add_executable(video_encoder video_encoder.cpp ${core_dir}/io_data.cpp ${core_dir}/video_encoder_core.cpp)
# target_link_libraries(video_encoder PRIVATE ${ffmpeg_solibs})

# add_executable(video_decoder video_decoder.cpp ${core_dir}/io_data.cpp ${core_dir}/video_decoder_core.cpp)
# target_link_libraries(video_decoder PRIVATE ${ffmpeg_solibs})


# add_executable(audio_decoder audio_decoder.cpp ${core_dir}/io_data.cpp ${core_dir}/audio_decoder_core.cpp)
# target_link_libraries(audio_decoder PRIVATE ${ffmpeg_solibs})

